[package]
name = "allwords"
version = "0.1.0"
description = ""
keywords = ["iterator", "fuzzy", "brute-force", "words", "alphabet"]
categories = ["data-structures", "encoding", "text-processing", "value-formatting"]
repository = "https://github.com/lmammino/allwords"
documentation = "https://github.com/lmammino/allwords"
readme = "README.md"
authors = ["Luciano Mammino"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
